v3/v3.3-ambient/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: bookinfo
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookinfo
  namespace: bookinfo
spec:
  parentRefs:
  - name: bookinfo-gateway
  hostnames:
  - "bookinfo-external-bookinfo.apps.ocp.dtdgw.sandbox1097.opentlc.com"
  - "aef397dc2adf746e1be3164ba73afcc8-890463234.us-east-2.elb.amazonaws.com"
  rules:
  - matches:
    - path: { type: Exact, value: /productpage }
    - path: { type: PathPrefix, value: /static }
    - path: { type: Exact, value: /login }
    - path: { type: Exact, value: /logout }
    - path: { type: PathPrefix, value: /api/v1/products }
    backendRefs:
    - name: productpage
      port: 9080
